--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	<properties>
 		<java-version>1.7</java-version>
 		<org.springframework-version>3.2.1.RELEASE</org.springframework-version>
+		<org.springsecurity-version>3.1.3.RELEASE</org.springsecurity-version>
 		<org.slf4j-version>1.7.2</org.slf4j-version>
 	</properties>
 	<dependencies>
@@ -45,6 +46,22 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${org.springframework-version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>${org.springsecurity-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${org.springsecurity-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${org.springsecurity-version}</version>
 		</dependency>
 		
 		<!-- Logging -->
@@ -106,7 +123,7 @@
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
-			<version>3.4.2</version>
+			<version>3.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.primefaces.themes</groupId>
